infra/data_retrieval/data-retrieval-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-retrieval
  labels:
    app: data-retrieval
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-retrieval
  template:
    metadata:
      labels:
        app: data-retrieval
    spec:
      containers:
        - name: data-retrieval
          image: shuki120/data-retrieval:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8004
