infra/data_retrieval/data_retrieval_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data_retrieval
  labels:
    app: data_retrieval
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data_retrieval
  template:
    metadata:
      labels:
        app: data_retrieval
    spec:
      containers:
        - name: data_retrieval
          image: shuki120/hostile-tweets:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 8004
