infra/data_retrieval/data_retrieval_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data_retrieval
spec:
  selector:
    app: data_retrieval
  ports:
    - protocol: TCP
      port: 8004
      targetPort: 8004
