infra/data_retrieval/data-retrieval-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: data-retrieval
  annotations:
    haproxy.router.openshift.io/timeout: 600s
spec:
  to:
    kind: Service
    name: data-retrieval
  port:
    targetPort: 8004
  tls:
    termination: edge
